--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -2,13 +2,10 @@
   --accent-color: #2196f3;
   --accent-button-color: #ffffff;
   --accent-button-bg-color: #2196f3;
-  --color-black: #212121;
-  --color-gray: #757575;
   --color-white: #ffffff;
   --color-blue: #2196f3;
   --bg-color-dark: #2f303a;
   --bg-color-blue: #2196f3;
-  --bg-color-white: #ffffff;
   --bg-color-gray: #f5f4fa;
 }
 *,
@@ -22,7 +19,7 @@ body {
   letter-spacing: 0.03em;
   line-height: 1.2;
 }
-.box {
+.container {
   width: 1200px;
   margin-right: auto;
   margin-left: auto;
@@ -35,20 +32,23 @@ body {
   list-style: none;
   letter-spacing: 0.02em;
 }
+/* ============================= current page ====================== */
+.page {
+  display: block;
+
+  color: var(--color-blue);
+}
 /* =================== header =========================== */
 header {
   padding-top: 24px;
   padding-bottom: 25px;
-  border: 1px solid #000000;
   border-bottom: 1px solid #ececec;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-  background-color: var(--bg-color-white);
 }
 header .link {
   letter-spacing: 0.02em;
 }
-.header-box {
+.header-container {
   display: flex;
 }
 .header-flex {
@@ -59,7 +59,7 @@ header .link {
   margin-left: auto;
 }
 /* ==================== header logo ===================== */
-.header-address + .header-address {
+.header-address + .header-address-flex {
   margin-left: 50px;
 }
 .header-logo {
@@ -83,21 +83,25 @@ header .link {
   margin-right: 50px;
 }
 .header-link {
-  color: var(--color-black);
+  display: block;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  color: #212121;
   font-weight: 500;
   font-size: 14px;
 }
-/* ============================= current page ====================== */
-.page {
-  display: block;
-
-  color: var(--color-blue);
+.header-link:hover,
+.header-link:focus,
+.header-address:hover,
+.header-address:focus {
+  color: var(--accent-color);
 }
 /* ====================== header address ============================ */
 .header-address {
-  color: var(--color-gray);
   font-weight: 500;
   font-size: 14px;
+
+  color: #757575;
 }
 .header-address:not(:last-child) {
   margin-right: 30px;
@@ -107,18 +111,12 @@ header .link {
 
   width: 16px;
   height: 12px;
-  fill: var(--color-gray);
+  fill: #757575;
 }
-.header-address-svg:hover,
-.header-address-svg:focus {
+.header-address:hover use,
+.header-address:focus use {
   cursor: pointer;
   fill: var(--accent-color);
-}
-.header-link:hover,
-.header-link:focus,
-.header-address:hover,
-.header-address:focus {
-  color: var(--accent-color);
 }
 /* ============================ portfolio =========================== */
 .portfolio {
@@ -139,14 +137,17 @@ header .link {
   border-color: transparent;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+
   padding: 6px 22px;
   min-width: 73px;
   height: 38px;
 
+  color: #212121;
   background-color: var(--bg-color-gray);
 }
 .filters-btn:hover,
 .filters-btn:focus {
+  cursor: pointer;
   color: var(--accent-button-color);
   background-color: var(--accent-button-bg-color);
 }
@@ -156,6 +157,7 @@ header .link {
   flex-wrap: wrap;
 }
 .projects-item {
+  position: relative;
   padding-bottom: 20px;
   margin-bottom: 30px;
   margin-right: 30px;
@@ -167,8 +169,19 @@ header .link {
   margin-right: 0;
 }
 .projects-item:hover {
+  cursor: pointer;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.projects-opacity {
+  position: relative;
+}
+.projects-item:hover .projects-opacity::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
 }
 .projects-img {
   display: block;
@@ -220,7 +233,7 @@ address {
   font-size: 14px;
   line-height: 1.7;
 }
-.address-box {
+.address-container {
   min-width: 231px;
   margin-right: 70px;
 }
@@ -273,7 +286,7 @@ address {
 
   background-color: var(--accent-color);
 }
-.join-icons {
+.join-svg {
   width: 20px;
   height: 20px;
 
