--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,9 @@
 :root {
+  --color-title: #212121;
   --accent-color: #2196f3;
-  --color-black: #212121;
-  --color-gray: #757575;
   --color-white: #ffffff;
-  --color-blue: #2196f3;
   --bg-color-dark: #2f303a;
   --bg-color-blue: #2196f3;
-  --bg-color-white: #ffffff;
 }
 *,
 *::before,
@@ -19,7 +16,7 @@ body {
   letter-spacing: 0.03em;
   line-height: 1.2;
 }
-.box {
+.container {
   width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
@@ -31,19 +28,33 @@ body {
   list-style: none;
   letter-spacing: 0.02em;
 }
+/* ============================= current page ====================== */
+.page {
+  display: block;
+  position: relative;
+
+  color: #2196f3;
+}
+.header-item-underline {
+  position: absolute;
+  bottom: -33px;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+
+  background-color: #2196f3;
+}
 /* =================== header =========================== */
 header {
   padding-top: 24px;
   padding-bottom: 25px;
   border-bottom: 1px solid #ececec;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-  background-color: var(--bg-color-white);
 }
 header .link {
   letter-spacing: 0.02em;
 }
-.header-box {
+.header-container {
   display: flex;
 }
 .header-flex {
@@ -60,7 +71,7 @@ header .link {
 .header-logo {
   margin-right: 93px;
 
-  color: var(--color-blue);
+  color: #2196f3;
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
@@ -78,22 +89,23 @@ header .link {
   margin-right: 50px;
 }
 .header-link {
-  color: var(--color-black);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   font-weight: 500;
   font-size: 14px;
-}
-/* ============================= current page ====================== */
-.page {
-  display: block;
 
-  color: var(--color-blue);
+  color: #212121;
+}
+.header-link:hover,
+.header-link:focus {
+  color: var(--accent-color);
 }
 /* ====================== header address ============================ */
 .header-address {
   font-weight: 500;
   font-size: 14px;
 
-  color: var(--color-gray);
+  color: #757575;
 }
 .header-address:not(:last-child) {
   margin-right: 30px;
@@ -103,18 +115,16 @@ header .link {
 
   width: 16px;
   height: 12px;
-  fill: var(--color-gray);
+  fill: #757575;
+}
+.header-address:hover,
+.header-address:focus {
+  color: var(--accent-color);
 }
 .header-address:hover use,
 .header-address:focus use {
   cursor: pointer;
   fill: var(--accent-color);
-}
-.header-link:hover,
-.header-link:focus,
-.header-address:hover,
-.header-address:focus {
-  color: var(--accent-color);
 }
 /* ================== hero ================ */
 .hero {
@@ -138,32 +148,33 @@ header .link {
   margin-top: 0;
   margin-bottom: 30px;
 
-  color: var(--color-white);
-  /* background-color: var(--bg-color-dark); */
   font-weight: 900;
   font-size: 44px;
   line-height: 1.4;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+
+  color: var(--color-white);
 }
-/* =========================== button  ============================= */
+/* =========================== hero btn  ============================= */
 .hero-btn {
   display: inline-block;
-  border: var(--bg-color-blue);
+  border-color: var(--bg-color-blue);
   border-radius: 4px;
   padding: 10px 32px;
   min-width: 200px;
   height: 50px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
-  color: var(--color-white);
-  background-color: var(--bg-color-blue);
   font-weight: 700;
   font-size: 16px;
   line-height: 1.9;
   text-align: center;
   letter-spacing: 0.06em;
+
+  color: var(--color-white);
+  background-color: var(--bg-color-blue);
 }
 /* ============================ advantages ============================= */
 .advantages {
@@ -202,10 +213,10 @@ header .link {
 .advantages-item:not(:last-child) {
   margin-right: 30px;
 }
-.advantages-title {
+.advantages-item-title {
   margin-bottom: 10px;
 
-  color: var(--color-black);
+  color: #212121;
   font-weight: 700;
   font-size: 14px;
   text-transform: uppercase;
@@ -225,7 +236,7 @@ header .link {
 }
 .doing-title {
   margin-bottom: 50px;
-  color: var(--color-black);
+  color: var(--color-title);
   font-weight: 700;
   font-size: 36px;
   text-align: center;
@@ -249,7 +260,7 @@ header .link {
 .team-title {
   margin-bottom: 50px;
 
-  color: var(--color-black);
+  color: var(--color-title);
   font-weight: 700;
   font-size: 36px;
   text-align: center;
@@ -264,16 +275,28 @@ header .link {
 .team-item:not(:last-child) {
   margin-right: 30px;
 }
-.team-social-list {
-  display: flex;
-  justify-content: center;
+/* ============ team-img =============================*/
+.team-img {
+  margin-bottom: 30px;
 }
-.team-social-item:not(:last-child) {
-  margin-right: 10px;
+/* ============ team-list-title =============================*/
+.team-list-title {
+  margin-bottom: 10px;
+
+  color: var(--color-title);
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
 }
-.team-social-item {
-  display: inline-block;
+/* =================== team-text ==================*/
+.team-text {
+  margin-bottom: 16px;
+  color: var(--color-gray);
+  font-weight: 400;
+  font-size: 16px;
+  text-align: center;
 }
+/* ========================== team-link =============================== */
 .team-link {
   display: flex;
   justify-content: center;
@@ -291,36 +314,28 @@ header .link {
 
   background-color: var(--accent-color);
 }
-.team-link:hover .team-svg,
-.team-link:focus .team-svg {
-  fill: var(--color-white);
+/* ======================== team-social-list ============================ */
+.team-social-list {
+  display: flex;
+  justify-content: center;
 }
+/* ======================== team-social-item ============================ */
+.team-social-item:not(:last-child) {
+  margin-right: 10px;
+}
+.team-social-item {
+  display: inline-block;
+}
+/* ======================== team-svg ============================ */
 .team-svg {
   width: 20px;
   height: 20px;
 
   fill: #afb1b8;
 }
-/* ========================================== images ============================================== */
-.team-img {
-  margin-bottom: 30px;
-}
-/* ============ team-list-title =============================*/
-.team-list-title {
-  margin-bottom: 10px;
-
-  color: var(--color-black);
-  font-weight: 500;
-  font-size: 16px;
-  text-align: center;
-}
-/* =================== team-text ==================*/
-.team-text {
-  margin-bottom: 16px;
-  color: var(--color-gray);
-  font-weight: 400;
-  font-size: 16px;
-  text-align: center;
+.team-link:hover .team-svg,
+.team-link:focus .team-svg {
+  fill: var(--color-white);
 }
 /* ========================= clients ============================ */
 .clients {
@@ -330,7 +345,7 @@ header .link {
 .clients-title {
   margin-bottom: 50px;
 
-  color: var(--color-black);
+  color: var(--color-title);
   font-weight: 700px;
   font-size: 36px;
   text-align: center;
@@ -384,7 +399,7 @@ footer {
   display: block;
   margin-bottom: 20px;
 
-  color: var(--color-blue);
+  color: var(#2196f3);
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
@@ -399,7 +414,7 @@ address {
   font-size: 14px;
   line-height: 1.7;
 }
-.address-box {
+.address-container {
   min-width: 231px;
   margin-right: 70px;
 }
@@ -452,9 +467,66 @@ address {
 
   background-color: var(--accent-color);
 }
-.join-icons {
+.join-svg {
   width: 20px;
   height: 20px;
 
   fill: var(--color-white);
+}
+/* ============================== hero backdrop ================================== */
+.hero-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.2);
+}
+/* .hero-backdrop.is-hidden {
+  opacity: 1;
+  pointer-events: none;
+} */
+.hero-modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 528px;
+  height: 581px;
+  border-radius: 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  /* padding: 15px; */
+
+  background-color: #ffffff;
+}
+.hero-modal-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  cursor: pointer;
+
+  width: 30px;
+  height: 30px;
+  padding: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+
+  background-color: #ffffff;
+}
+.hero-modal-btn-svg {
+  width: 11px;
+  height: 11px;
+
+  fill: #212121;
+}
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
