--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -35,8 +35,18 @@ body {
 /* ============================= current page ====================== */
 .page {
   display: block;
+  position: relative;
 
-  color: var(--color-blue);
+  color: #2196f3;
+}
+.header-item-underline {
+  position: absolute;
+  bottom: -33px;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+
+  background-color: #2196f3;
 }
 /* =================== header =========================== */
 header {
@@ -83,12 +93,12 @@ header .link {
   margin-right: 50px;
 }
 .header-link {
-  display: block;
+  /* display: block; */
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  color: #212121;
   font-weight: 500;
   font-size: 14px;
+  color: #212121;
 }
 .header-link:hover,
 .header-link:focus,
@@ -98,6 +108,8 @@ header .link {
 }
 /* ====================== header address ============================ */
 .header-address {
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   font-weight: 500;
   font-size: 14px;
 
@@ -106,6 +118,11 @@ header .link {
 .header-address:not(:last-child) {
   margin-right: 30px;
 }
+.header-address:hover,
+.header-address:focus {
+  cursor: pointer;
+  color: var(--accent-color);
+}
 .header-address-svg {
   margin-right: 10px;
 
@@ -113,8 +130,8 @@ header .link {
   height: 12px;
   fill: #757575;
 }
-.header-address:hover use,
-.header-address:focus use {
+.header-address:hover .header-address-svg,
+.header-address:focus .header-address-svg {
   cursor: pointer;
   fill: var(--accent-color);
 }
@@ -173,8 +190,23 @@ header .link {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.projects-opacity {
-  position: relative;
+.projects-item:hover .projects-hover-text {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 322px;
+  height: 168px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.5;
+
+  color: #ffffff;
+}
+.projects-item:hover .projects-img {
+  background-color: rgba(33, 150, 243, 0.9);
 }
 .projects-item:hover .projects-opacity::before {
   position: absolute;
@@ -182,6 +214,12 @@ header .link {
   width: 100%;
   height: 100%;
   background: rgba(33, 150, 243, 0.9);
+}
+.projects-opacity {
+  position: relative;
+}
+.projects-hover-text {
+  display: none;
 }
 .projects-img {
   display: block;
