--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -39,8 +39,10 @@ body {
 
   color: #2196f3;
 }
-.header-item-underline {
+.page::after {
   position: absolute;
+  content: "";
+  left: 0;
   bottom: -33px;
   width: 100%;
   height: 4px;
@@ -93,7 +95,6 @@ header .link {
   margin-right: 50px;
 }
 .header-link {
-  /* display: block; */
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   font-weight: 500;
@@ -175,6 +176,7 @@ header .link {
 }
 .projects-item {
   position: relative;
+
   padding-bottom: 20px;
   margin-bottom: 30px;
   margin-right: 30px;
@@ -190,39 +192,37 @@ header .link {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.projects-item:hover .projects-hover-text {
+.projects-item:hover .projects-transform-text {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+.projects-opacity {
+  position: relative;
+  /* overflow: hidden; */
+}
+.projects-img {
+  display: block;
+}
+.projects-transform-text {
+  opacity: 0;
+  visibility: hidden;
   display: block;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(100%);
 
-  width: 322px;
-  height: 168px;
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.5;
 
   color: #ffffff;
-}
-.projects-item:hover .projects-img {
-  background-color: rgba(33, 150, 243, 0.9);
-}
-.projects-item:hover .projects-opacity::before {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  background: rgba(33, 150, 243, 0.9);
-}
-.projects-opacity {
-  position: relative;
-}
-.projects-hover-text {
-  display: none;
-}
-.projects-img {
-  display: block;
+  background-color: var(--accent-color);
 }
 .group {
   padding-right: 24px;
